--- a/app.json
+++ b/app.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://msimo9.github.io",
   "expo": {
     "name": "typingapp",
     "slug": "typingapp",
@@ -7,5 +8,10 @@
       "**/*"
     ]
   },
-  "name": "typingapp"
+  "name": "typingapp",
+  "scripts": {
+    "deploy": "gh-pages -d web-build",
+    "predeploy": "expo build:web"
+  }
+  
 }
