--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-ionicons": "^4.x",
+    "react-native-modal": "^13.0.0",
     "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1"
   },
