--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.2",
     "@expo-google-fonts/roboto-mono": "^0.2.2",
+    "@miblanchard/react-native-slider": "^2.1.0",
+    "@ptomasroos/react-native-multi-slider": "^2.2.2",
+    "@react-native-community/checkbox": "^0.5.9",
+    "@react-native-community/slider": "^4.2.0",
+    "@reduxjs/toolkit": "^1.7.2",
     "expo": "~44.0.2",
     "expo-app-loading": "~1.3.0",
     "expo-font": "~10.0.4",
@@ -23,8 +28,11 @@
     "react-native": "0.64.3",
     "react-native-ionicons": "^4.x",
     "react-native-modal": "^13.0.0",
+    "react-native-paper": "^4.11.2",
     "react-native-vector-icons": "^9.0.0",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
